deploy/deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gokub-tester
  labels:
    app: gokub-tester
spec:
  containers:
    - name: gokub-tester
      image: horvatic/gokub-tester
      ports:
        - containerPort: 8080
          name: "gokub-http"
      livenessProbe:
        httpGet:
          path: /healthz
          port: 8080
        initialDelaySeconds: 3
        periodSeconds: 3
