deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gokub-tester
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: gokub-http
  selector:
    app: gokub-tester
